# codeowners-enforcer

./: .gitignore  .purposefile  CODEOWNERS  Cargo.toml  README.md  azure-pipelines.yml  install.js  package-lock.json  package.json
ci/: azure-create-tarball.yml
lib/: bin.js  cli.js  install.js
scripts/: version.sh
src/: main.rs
