[package]
name = "codeowners-enforcer"
version = "1.0.0" # generated
authors = ["Jamie Kyle <me@thejameskyle.com>"]
edition = "2018"

exclude = [
  "package.json",
  "package-lock.json",
  "azure-pipelines-yml",
  "scripts",
  "ci",
  "CODEOWNERS",
  ".purposefile"
]

[dependencies]
clap = "2.33.0"
ignore = "0.4.7"
codeowners = "0.1.3"
ansi_term = "0.11.0"
