[package]
name = "codeowners-enforcer"
description = "Enforce CODEOWNERS files on your repo"
version = "1.0.3" # generated
homepage = "https://github.com/jamiebuilds/codeowners-enforcer"
repository = "https://github.com/jamiebuilds/codeowners-enforcer"
authors = ["Jamie Kyle <me@thejameskyle.com>"]
edition = "2018"
license = "MIT"
categories = ["cli", "git"]

exclude = [
  "package.json",
  "package-lock.json",
  "azure-pipelines-yml",
  "scripts/*",
  "ci/*",
  "CODEOWNERS",
  ".purposefile"
]

[dependencies]
clap = "2.33.0"
ignore = "0.4.7"
codeowners = "0.1.3"
ansi_term = "0.11.0"
